<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">



 <item
        android:id="@+id/action_langue"
        android:orderInCategory="100"
        android:title="@string/action_langue"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/langue_AR"
                android:orderInCategory="100"
                android:title="@string/langue_AR"
                app:showAsAction="never" />
            <item
                android:id="@+id/langue_FR"
                android:orderInCategory="100"
                android:title="@string/langue_FR"
                app:showAsAction="never" />
        </menu>


    </item>


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/se_d_connecter"
        app:showAsAction="never" />
</menu>
