<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    tools:context=".GlucoseActivity"
    android:background="#fff"
    android:useDefaultMargins="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#FFF"
            tools:context=".MainActivity">



            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:text="@string/glucide_avant_repas_tv"
                    android:fontFamily="@font/tmed"
                    android:textColor="#000"
                    android:textSize="18dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"

                    android:layout_marginBottom="8dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_edit_textg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/radiusinput"
                        android:fontFamily="@font/tregular"
                        android:gravity="center"
                        android:hint="@string/h1"

                        android:inputType="numberDecimal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="16dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:text="@string/glucide_apres_4_tv"
                    android:textColor="#000"
                    android:textSize="18dp"
                    android:fontFamily="@font/tmed"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_input2"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_edit_text1g"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/h2"

                        android:inputType="numberDecimal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="16dp"
                        android:fontFamily="@font/tregular"
                        android:background="@drawable/radiusinput"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:text="@string/insuline_calcule_tv"
                    android:textColor="#000"
                    android:textSize="18dp"
                    android:fontFamily="@font/tmed"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_input3"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_edit_text2g"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/h3"


                        android:inputType="numberDecimal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="16dp"
                        android:fontFamily="@font/tregular"
                        android:background="@drawable/radiusinput"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:text="@string/commentaire"
                    android:textColor="#000"
                    android:textSize="18dp"
                    android:fontFamily="@font/tmed"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_input4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_edit_text3g"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/h4"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="16dp"
                        android:fontFamily="@font/tregular"
                        android:background="@drawable/radiusinput"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_input5"

                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginBottom="8dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_edit_text4g"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/add_comment"

                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="16dp"
                        android:fontFamily="@font/tregular"
                        android:background="@drawable/radiusinput"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="328dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="36dp"
                    android:background="@drawable/bg_report_blue"
                    android:gravity="center"
                    android:text="@string/save_glucide_apres4_btn"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:fontFamily="@font/tregular"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.tbuonomo.morphbottomnavigation.MorphBottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:backgroundTint="@color/grey"
        app:itemIconTint="@color/colorPrimaryLight"
        app:itemTextColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:menu="@menu/menu_meals" />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:background="@color/white"

        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <com.tbuonomo.morphbottomnavigation.MorphBottomNavigationView
        android:id="@+id/bottomNavigationViewG"
        style="@style/BottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:backgroundTint="#2b3fee"
        app:itemIconTint="#fff"
        app:itemTextColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_items"
        app:morphCornerRadius="128dp"
        app:morphItemRadius="64dp"
        app:morphVerticalOffset="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
