<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="400dp"

            android:background="@drawable/bg_header"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:gravity="left"

            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ImageView
            android:id="@+id/imageViewBlood"
            android:layout_width="222.56dp"
            android:layout_height="187.75dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/imagelogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="@string/welcome"
            android:textColor="#666666"
            android:textSize="24sp"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBlood" />

        <TextView
            android:id="@+id/subtitle_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/tregular"
            android:text="@string/sign_in_label"
            android:textColor="#b3b3b3"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"

            android:layout_marginTop="80dp"

            android:background="@drawable/bg_input"
            android:fontFamily="@font/tregular"
            android:gravity="center"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:textColor="#FFF"
            android:textColorHint="#FFF"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toTopOf="@+id/editTextPassword"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_visibility_off_black_24dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="50dp"


            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_btn_primary"
            android:fontFamily="@font/tregular"
            android:text="@string/sign"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>